# framework

./: Cargo.toml  README.md
assets/css/: sound_gui_theme.css
assets/shader/: modelCyclesReactive.frag  noise2D.frag  sinwave.frag  texture2D.frag
assets/shader/yura2/: yura2.frag  yura2.vert
examples/: cpal_test.rs  empty.rs  model_cycles_reactive.rs  shader_and_image.rs  sound_canvas.rs  sound_shader.rs  texture.rs  yura2.rs
src/: image_manager.rs  lib.rs  mesh.rs  shader.rs
